[DESIGN] icon format changed (flags)

--- a/src/main/webapp/index_copy.html
+++ b/src/main/webapp/index_copy.html
@@ -1,12 +1,11 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-pageEncoding="UTF-8"%>
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Insert title here</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
     <!-- Header Area -->
@@ -35,13 +34,13 @@ pageEncoding="UTF-8"%>
         /></a>
         <a href=""
           ><img
-            src="img/icon/korea-icon.svg"
+            src="img/icon/korea-icon.png"
             alt="korean-button"
             class="header-icons"
         /></a>
         <a href=""
           ><img
-            src="img/icon/japan-icon.svg"
+            src="img/icon/japan-icon.png"
             alt="japanese-button"
             class="header-icons"
         /></a>
