--- a/src/main/webapp/index_copy.html
+++ b/src/main/webapp/index_copy.html
@@ -19,39 +19,50 @@
           />
         </a>
       </div>
-      <ul class="header-icons">
-        <a href=""
-          ><img
-            src="img/icon/sun-icon.png"
-            alt="bright-mode"
-            class="header-icons"
-        /></a>
-        <a href=""
-          ><img
-            src="img/icon/moon-icon.png"
-            alt="dark-mode"
-            class="header-icons"
-        /></a>
-        <a href=""
-          ><img
-            src="img/icon/korea-icon.png"
-            alt="korean-button"
-            class="header-icons"
-        /></a>
-        <a href=""
-          ><img
-            src="img/icon/japan-icon.png"
-            alt="japanese-button"
-            class="header-icons"
-        /></a>
-      </ul>
-      <ul class="drop-menu">
-        <li><a href="./jsp/quiz.jsp">Quiz</a></li>
-        <li><a href="./jsp/myRewards.jsp">My Rewards</a></li>
-        <li><a href="./jsp/community.jsp">Community</a></li>
-        <li><a href="./jsp/login.jsp">Login</a></li>
-        <li><a href="./jsp/join.jsp">Join</a></li>
-      </ul>
+      <div class="menu-area">
+        <ul class="header-icons">
+          <li>
+            <a href=""
+              ><img
+                src="img/icon/sun-icon.png"
+                alt="bright-mode"
+                class="header-icons"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="img/icon/moon-icon.png"
+                alt="dark-mode"
+                class="header-icons"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="img/icon/korea-icon.png"
+                alt="korean-button"
+                class="header-icons"
+            /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img
+                src="img/icon/japan-icon.png"
+                alt="japanese-button"
+                class="header-icons"
+            /></a>
+          </li>
+        </ul>
+        <!-- 드롭다운 메뉴 -->
+        <ul class="drop-menu">
+          <li><a href="./jsp/quiz.jsp">Quiz</a></li>
+          <li><a href="./jsp/myRewards.jsp">My Rewards</a></li>
+          <li><a href="./jsp/community.jsp">Community</a></li>
+          <li><a href="./jsp/login.jsp">Login</a></li>
+          <li><a href="./jsp/join.jsp">Join</a></li>
+        </ul>
+      </div>
     </header>
 
     <!-- Article Area -->
