--- a/src/main/webapp/index_copy.html
+++ b/src/main/webapp/index_copy.html
@@ -73,6 +73,6 @@
     </article>
 
     <!-- Footer Area -->
-    <footer>footer area</footer>
+    <footer class="footer">footer area</footer>
   </body>
 </html>
