--- a/src/main/webapp/jsp/pokemonMain.html
+++ b/src/main/webapp/jsp/pokemonMain.html
@@ -1,50 +1,48 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-pageEncoding="UTF-8"%>
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Insert title here</title>
-    <link rel="stylesheet" href="css/pokemonMain.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/pokemonMain.css" />
   </head>
   <body>
     <div id="main-page-wrapper">
-    
       <!-- Pokemon Type Buttons -->
       <div class="type-icons-wrapper">
         <div class="type-icons" class="type-icons-first-row">
           <button name="normal">
-            <img src="img/pokemon-type/circle-type/normal.png" alt="normal-type" />
+            <img src="../img/pokemon-type/circle-type/normal.png" alt="" />
           </button>
           <button name="fire">
-            <img src="img/pokemon-type/circle-type/fire.png" alt="fire-type" />
+            <img src="../img/pokemon-type/circle-type/fire.png" alt="" />
           </button>
           <button name="water">
-            <img src="img/pokemon-type/circle-type/water.png" alt="water-type" />
+            <img src="../img/pokemon-type/circle-type/water.png" alt="" />
           </button>
         </div>
 
         <div class="type-icons" class="type-icons-first-row">
           <button name="grass">
-            <img src="img/pokemon-type/circle-type/grass.png" alt="grass-type" />
+            <img src="../img/pokemon-type/circle-type/grass.png" alt="" />
           </button>
           <button name="electric">
-            <img src="img/pokemon-type/circle-type/electric.png" alt="electric-type" />
+            <img src="../img/pokemon-type/circle-type/electric.png" alt="" />
           </button>
           <button name="ice">
-            <img src="img/pokemon-type/circle-type/ice.png" alt="ice-type" />
+            <img src="../img/pokemon-type/circle-type/ice.png" alt="" />
           </button>
         </div>
 
         <div class="type-icons" class="type-icons-first-row">
           <button name="fight">
-            <img src="img/pokemon-type/circle-type/fight.png" alt="fight-type" />
+            <img src="../img/pokemon-type/circle-type/fight.png" alt="" />
           </button>
           <button name="poison">
-            <img src="img/pokemon-type/circle-type/poison.png" alt="poison-type" />
+            <img src="../img/pokemon-type/circle-type/poison.png" alt="" />
           </button>
           <button name="ground">
-            <img src="img/pokemon-type/circle-type/ground.png" alt="ground-type" />
+            <img src="../img/pokemon-type/circle-type/ground.png" alt="" />
           </button>
         </div>
       </div>
@@ -52,37 +50,37 @@ pageEncoding="UTF-8"%>
       <div class="type-icons-wrapper">
         <div class="type-icons" class="type-icons-second-row">
           <button name="flying">
-            <img src="img/pokemon-type/circle-type/flying.png" alt="flying-type" />
+            <img src="../img/pokemon-type/circle-type/flying.png" alt="" />
           </button>
           <button name="psychic">
-            <img src="img/pokemon-type/circle-type/psychic.png" alt="psychic-type" />
+            <img src="../img/pokemon-type/circle-type/psychic.png" alt="" />
           </button>
           <button name="bug">
-            <img src="img/pokemon-type/circle-type/bug.png" alt="bug-type" />
+            <img src="../img/pokemon-type/circle-type/bug.png" alt="" />
           </button>
         </div>
 
         <div class="type-icons" class="type-icons-second-row">
           <button name="rock">
-            <img src="img/pokemon-type/circle-type/rock.png" alt="rock-type" />
+            <img src="../img/pokemon-type/circle-type/rock.png" alt="" />
           </button>
           <button name="ghost">
-            <img src="img/pokemon-type/circle-type/ghost.png" alt="ghost-type" />
+            <img src="../img/pokemon-type/circle-type/ghost.png" alt="" />
           </button>
           <button name="dragon">
-            <img src="img/pokemon-type/circle-type/dragon.png" alt="dragon-type" />
+            <img src="../img/pokemon-type/circle-type/dragon.png" alt="" />
           </button>
         </div>
 
         <div class="type-icons" class="type-icons-second-row">
           <button name="dark">
-            <img src="img/pokemon-type/circle-type/dark.png" alt="dark-type" />
+            <img src="../img/pokemon-type/circle-type/dark.png" alt="" />
           </button>
           <button name="steel">
-            <img src="img/pokemon-type/circle-type/steel.png" alt="steel-type" />
+            <img src="../img/pokemon-type/circle-type/steel.png" alt="" />
           </button>
           <button name="fairy">
-            <img src="img/pokemon-type/circle-type/fairy.png" alt="fairy-type" />
+            <img src="../img/pokemon-type/circle-type/fairy.png" alt="" />
           </button>
         </div>
       </div>
@@ -95,7 +93,7 @@ pageEncoding="UTF-8"%>
           placeholder="포켓몬의 이름 또는 도감 번호를 입력하세요"
         />
         <img
-          src="img/icon/magnifier-icon.png"
+          src="../img/icon/magnifier-icon.png"
           alt="magnifier-icon"
           id="magnifier-icon"
         />
@@ -108,14 +106,14 @@ pageEncoding="UTF-8"%>
             <div class="card-contents">
               <p>#4</p>
               <img
-                src="img/charmander.png"
+                src="../img/charmander.png"
                 alt="charmander"
                 class="card-pokemon-img"
               />
               <hr class="horizontal-line" />
               <p>파이리</p>
               <img
-                src="img/pokemon-type/circle-type/fire.png"
+                src="../img/pokemon-type/circle-type/fire.png"
                 alt="fire-type"
                 class="card-type-icon"
               />
