--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Insert title here</title>
-    <script type="text/javascript" src="location.href='HC'"></script>
+    <script type="text/javascript">
+    location.href='HC';
+    </script>
   </head>
   <body>
     <h1>index.html</h1>
