[Add] .gitignore 목록 업데이트 / [Design] Main 페이지 다크모드 배경색 변경 (스크롤 색상, 아이콘 색상 변경 진행 중)

--- a/src/main/webapp/pokedexFrameAccount.html
+++ b/src/main/webapp/pokedexFrameAccount.html
@@ -22,7 +22,9 @@
                 id="poke-spot-icon"
               />
             </div>
-            <div id="pokedex-white-bg"></div>
+            <div id="pokedex-white-bg">
+            컨텐츠를 입력하세요.
+            </div>
           </div>
         </div>
       </div>
