[Design] 맡은 페이지 전체 pokedex(게임기) 디자인 삽입 후 백업용 커밋

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Insert title here</title>
+    <title>index.html</title>
   </head>
   <body>
     <h1>index.html</h1>
